--- a/app/styles/ntd-responsive.scss
+++ b/app/styles/ntd-responsive.scss
@@ -37,7 +37,13 @@
 }
 
 @media (max-width: 992px) {
-    .side-nav {
+    .side-nav-container {
+        max-height: 350px;
+        .side-nav {
+          .side-nav-menu {
+            padding-bottom: 20px;
+          }
+        }
         &.affix {
             position: relative;
         }
